--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,3 +1,3 @@
-
-
+<h3>Click Upload button to start uploading your files to server</h3>
+<h4>Multiple files can be selected and uploaded at the same time</h4>
 <button mat-raised-button color="warn" (click)="openUploadDialog()">Upload</button>
